--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
+  display:flex;
   font-family: monospace;
   background: papayawhip;
+  align-items: center;
+  justify-content: space-between;
+  height: 100px;
 }
 
 .logo {
@@ -8,12 +12,33 @@
   font-weight: 900;
   color: tomato;
   background: white;
-  padding: 4px 32px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.left-links{
+padding-left: 10px;
+border: 3px solid black;
+}
+.left-individual{
+  
+  margin-left: 10px;
+  margin-right: 5px;
+}
+.right-individual{
+  
+  margin-right: 10px;
+  margin-left: 5px;
+}
+.right-links{
+padding-right: 10px;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display:inline-flex;
+  padding-left: 0px;
+  
 }
 
 a {
