--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -9,9 +9,12 @@ body {
 }
 
 .header {
+  display: flex;
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  align-items: center;
+  padding: 8px;
 }
 
 .profile-image {
@@ -30,11 +33,12 @@ body {
 }
 
 button {
-  border: none;
+  display: flex;
   border-radius: 8px;
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  margin-right: 16px;
 }
 
 a {
@@ -45,4 +49,9 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  margin-right: auto;
+  margin-left: 16px;
+  padding: 0px;
+  gap: 16px;
 }
