--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,15 +1,39 @@
 body {
   font-family: 'Courier New', Courier, monospace;
 }
-
+.text{
+  text-align: center;
+}
 img {
   width: 100px;
   height: 100px;
-}
 
+}
+.title-container{
+  display: flex;
+  margin: auto;
+  margin-bottom: 32px;
+}
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin: auto;
+}
+.content-container{
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+}
+.plant-1-container,
+.plant-2-container,
+.plant-3-container,
+.plant-4-container
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
+  flex-wrap: wrap;
 }
 
 /* do not edit this footer */
